42_container_tester/logs_student/map_operations/find.log
main/map_operations/find.cpp:20:20: error: expected unqualified-id
    pair<int, int> p2(1, 3);
                   ^
main/map_operations/../../.././incs/ft_containers.hpp:21:13: note: expanded from macro 'p2'
# define p2 << std::endl;
            ^
main/map_operations/find.cpp:20:23: error: expression result unused [-Werror,-Wunused-value]
    pair<int, int> p2(1, 3);
                      ^
main/map_operations/find.cpp:20:26: error: expression result unused [-Werror,-Wunused-value]
    pair<int, int> p2(1, 3);
                         ^
main/map_operations/find.cpp:21:19: error: expected expression
    myMap2.insert(p2);
                  ^
main/map_operations/../../.././incs/ft_containers.hpp:21:13: note: expanded from macro 'p2'
# define p2 << std::endl;
            ^
main/map_operations/find.cpp:23:20: error: definition or redeclaration of 'cout' not allowed inside a function
    pair<int, int> p3(2, 4);
                   ^~
main/map_operations/../../.././incs/ft_containers.hpp:22:18: note: expanded from macro 'p3'
# define p3 std::cout << std::endl;
            ~~~~~^
main/map_operations/find.cpp:23:20: error: expected ';' at end of declaration
main/map_operations/../../.././incs/ft_containers.hpp:22:23: note: expanded from macro 'p3'
# define p3 std::cout << std::endl;
                      ^
main/map_operations/find.cpp:23:23: error: expression result unused [-Werror,-Wunused-value]
    pair<int, int> p3(2, 4);
                      ^
main/map_operations/find.cpp:23:26: error: expression result unused [-Werror,-Wunused-value]
    pair<int, int> p3(2, 4);
                         ^
main/map_operations/find.cpp:24:19: error: unexpected ';' before ')'
    myMap2.insert(p3);
                  ^
main/map_operations/../../.././incs/ft_containers.hpp:22:35: note: expanded from macro 'p3'
# define p3 std::cout << std::endl;
                                  ^
9 errors generated.
